fixed footer spacing

--- a/app/sass/partials/_general.scss
+++ b/app/sass/partials/_general.scss
@@ -7,11 +7,6 @@
 
 .options-list { @include elr-em-font(14px); }
 
-.copyright {
-    @include elr-em-font(12px);
-    text-align: center;
-}
-
 .main-body {
     display: flex;
     min-height: 100vh;
